; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/apr/poll/unix/extr_pollcb.c_pollcb_provider.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/apr/poll/unix/extr_pollcb.c_pollcb_provider.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@apr_pollcb_provider_epoll = common dso_local global i32* null, align 8
@apr_pollcb_provider_kqueue = common dso_local global i32* null, align 8
@apr_pollcb_provider_poll = common dso_local global i32* null, align 8
@apr_pollcb_provider_port = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @pollcb_provider to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @pollcb_provider(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  store i32* null, i32** %3, align 8
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %10 [
    i32 131, label %5
    i32 129, label %6
    i32 132, label %7
    i32 130, label %8
    i32 128, label %9
    i32 134, label %9
    i32 133, label %9
  ]

5:                                                ; preds = %1
  br label %10

6:                                                ; preds = %1
  br label %10

7:                                                ; preds = %1
  br label %10

8:                                                ; preds = %1
  br label %10

9:                                                ; preds = %1, %1, %1
  br label %10

10:                                               ; preds = %1, %9, %8, %7, %6, %5
  %11 = load i32*, i32** %3, align 8
  ret i32* %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
